<resources>
    <string name="app_name">AR Camera</string>

    <string name="deep_ar_key" translatable="false">d492e4212d8472bbef8f584c3d5514dd044be27b84a148206e50c3481ee86390dbba8af194a9a2bb</string>

    <string name="oym">OPEN YOUR MOUTH</string>
    <string name="no_library">No photos or videos</string>
    <string name="info">Info.</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <string name="unknown">Unknown</string>
    <string name="name">Name</string>
    <string name="folder">Folder</string>
    <string name="type">Type</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
</resources>