<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="72dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="26dp"
                android:elevation="6dp"
                app:cardBackgroundColor="#171717"
                app:cardCornerRadius="26dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="26dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <include layout="@layout/separator" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/folder"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtFolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <include layout="@layout/separator" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtMimeType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <include
                        android:id="@+id/separatorDuration"
                        layout="@layout/separator" />

                    <TextView
                        android:id="@+id/txtDurationTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtDuration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <include layout="@layout/separator" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <include layout="@layout/separator" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/resolution"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtResolution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                    <include layout="@layout/separator" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/size"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>

